--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 matplotlib-inline==0.1.7
 mistune==3.0.2
-mkl-service==2.4.0
+mkl-service
 monotonic==1.6
 mpmath==1.3.0
 murmurhash
@@ -100,7 +100,7 @@ PyYAML==6.0.1
 pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.5.15
-request
+requests
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
@@ -142,4 +142,3 @@ webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==12.0
-
